Fixed key issue in production

--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,4 @@ test:
 
 production:
   <<: *default
-  database: ENV['DATABASE_URL']
-  username: ENV['DATABASE_USERNAME']
-  password: ENV['DATABASE_PASSWORD']
+  database: booking_slots_production
