--- a/config/database.yml
+++ b/config/database.yml
@@ -102,6 +102,6 @@ test:
 #
 production:
   <<: *default
-  database: ENV['CLEARDB_DATABASE_URL']
-  username: ENV['CLEARDB_DATABASE_USERNAME']
-  password: ENV['CLEARDB_DATABASE_PASSWORD']
+  database: booking_slots_production
+  username: sudhakar
+  password: sudha9900
